--- a/style.css
+++ b/style.css
@@ -50,6 +50,19 @@
     cursor: pointer;
     margin-bottom: 30px;
 }
+.answersBtn{
+    margin-top: 20px;
+    margin-left: 20px;
+    height: 40px;
+    width: 190px;
+    font-size: 17px;
+    font-weight: bolder;
+    border-radius: 20px;
+    border:solid 1px white;
+    background-color: rgba(72, 72, 80, 0.34);
+    cursor: pointer;
+    margin-bottom: 30px;
+}
 #saying{
     color: rgb(255, 128, 0);
 }
